fixes -full-container scrolling, hr overflow

--- a/_reserved/base.scss
+++ b/_reserved/base.scss
@@ -62,4 +62,5 @@ hr {
   background: color(border);
   margin: space(medium) 0;
   border: none;
+  overflow: hidden;
 }
